# tradfri_gui

./: .gitignore  Readme.md  build.ps1  build.sh  installer.nsis  pyproject.toml
src/: main.py
src/utils/: auth.py  resource_path.py  settings.py
src/windows/: config.py  main.py
